--- a/src/styles/modules/details/details.scss
+++ b/src/styles/modules/details/details.scss
@@ -47,10 +47,14 @@
     }
   }
   > main {
+    flex: 1;
     overflow-y: auto;
   }
 }
 .good {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   main {
     flex: 1;
     overflow-y: auto;
@@ -197,5 +201,77 @@
 .details {
   img {
     width: 100%;
+  }
+}
+.comments {
+  ul {
+    padding: 0 0.15rem;
+    li {
+      padding: 0.15rem;
+      margin-top: 0.2rem;
+      box-shadow: 0 0.05rem 0.11rem 0 rgba(0, 0, 0, 0.1);
+      border-radius: 0.15rem;
+      .userInfo {
+        display: flex;
+        > div:nth-child(1) {
+          img {
+            width: 0.4rem;
+            height: 0.4rem;
+            border-radius: 50%;
+            border: 1px solid #eee;
+          }
+        }
+        > div:nth-child(2) {
+          font-size: 0.12rem;
+          flex: 1;
+          margin-left: 0.05rem;
+          p:first-child {
+            span {
+              color: #333;
+              margin-right: 0.05rem;
+            }
+            img {
+              height: 0.13rem;
+            }
+          }
+          p:last-child {
+            color: #999;
+          }
+        }
+        > div:nth-child(3) {
+          img {
+            width: 0.6rem;
+          }
+        }
+      }
+      .text {
+        color: #333;
+        font-size: 0.13rem;
+        margin-top: 0.05rem;
+        margin-bottom: 0.15rem;
+      }
+      .imgBox {
+        img {
+          width: 25%;
+          border-radius: 0.05rem;
+          margin: 0 0.02rem;
+        }
+      }
+      .bottomInfo {
+        display: flex;
+        color: #999;
+        font-size: 0.12rem;
+        margin-top: 0.05rem;
+        span:first-child {
+          margin-top: 0.03rem;
+          flex: 1;
+        }
+        span:last-child {
+          padding-left: 0.2rem;
+          background: url(../images/details/icon.png) no-repeat -8px -44px;
+          background-size: 105px auto;
+        }
+      }
+    }
   }
 }
