--- a/src/styles/modules/search/search.scss
+++ b/src/styles/modules/search/search.scss
@@ -33,7 +33,7 @@ body {
         line-height: 0.35rem;
         font-size: 0.14rem;
       }
-      label {
+      a.searchIcon {
         img {
           height: 0.16rem;
           margin-top: -0.02rem;
