--- a/src/views/details.html
+++ b/src/views/details.html
@@ -60,5 +60,14 @@
     <div>
       <img src="https://img2.epetbar.com/2018-10/23/17/5938121ecf9dc6cb6c818e5b1b4ccfb0.jpg@300y-7ic" alt="">
     </div>
+    <div>
+      <img src="https://img1.epetbar.com/2018-09/10/15/de591bf83ed2f4b326307d86f659b2ae.jpg@!water" alt="">
+    </div>
+    <div>
+      <img src="https://static.epetbar.com/static_wap/epetapp/pages/goods_detail/images/wap_goods_intro_bottom.jpg" alt="">
+    </div>
+    <div>
+      <img src="https://static.epetbar.com/static_wap/epetapp/pages/goods_detail/images/wap_goods_pricefont.jpg" alt="">
+    </div>
   </div>
 </div>
