--- a/src/views/good.html
+++ b/src/views/good.html
@@ -3,10 +3,11 @@
         <div class="detailsBanner">
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img
-                            src="https://img2.epetbar.com/2018-12/11/19/6a115b1ddec3509999efd753d588f90a.jpg?x-oss-process=style/cut&amp;$1=500&amp;$2=500">
+                    {{each data[0].photos value index}}
+                    <div class="swiper-slide"><img src="{{value.image}}">
                     </div>
-                    <div class="swiper-slide"><img
+                    {{/each}}
+                    <!-- <div class="swiper-slide"><img
                             src="https://img2.epetbar.com/2018-12/11/19/e4ba4793d7642bb9cb858c2f0b1b35af.jpg?x-oss-process=style/cut&amp;$1=500&amp;$2=500">
                     </div>
                     <div class="swiper-slide"><img
@@ -17,21 +18,21 @@
                     </div>
                     <div class="swiper-slide"><img
                             src="https://img2.epetbar.com/2018-12/11/19/71374332059255e9b5215a9ba0c6f549.jpg?x-oss-process=style/cut&amp;$1=500&amp;$2=500">
-                    </div>
+                    </div> -->
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
         </div>
         <div class="info">
-            <p>皇家royal canin PR27小型犬成犬专用狗粮2kg </p>
-            <p> 健康膳食 亮丽皮毛</p>
+            <p>{{data[1].subject}}</p>
+            <p>{{data[1].presubject}}</p>
             <div>
                 <span>
                     <span>￥</span>
                     <span>116.00</span>
                     <span>￥135.40</span>
                 </span>
-                <a href="#"><img src="https://static.epetbar.com/static_wap/appmall/lib/goods/quality_assurance.png"
+                <a href="javascript:void(0);"><img src="https://static.epetbar.com/static_wap/appmall/lib/goods/quality_assurance.png"
                         alt=""></a>
             </div>
         </div>
@@ -46,11 +47,11 @@
     </main>
     <footer>
         <div>
-            <a href="javascript:void(0)">
+            <a href="javascript:void(0);">
                 <i></i>
                 <span>收藏</span>
             </a>
-            <a href="#">
+            <a href="javascript:void(0);">
                 <i>
                     <span class="cartNum">0</span>
                 </i>
