--- a/src/views/goodDetail.html
+++ b/src/views/goodDetail.html
@@ -1,4 +1,4 @@
-<div class="m-details">
+<div class="m-details" data-id="{{id}}">
     <header>
         <a class="goBack" href="#"></a>
         <nav>
@@ -8,7 +8,7 @@
                 <li><a href="#/index/goodDetail/comments">评价</a></li>
             </ul>
         </nav>
-        <a href="#"></a>
+        <a href="javascript:void(0);"></a>
     </header>
     <main></main>
 </div>
