--- a/src/views/listPages.html
+++ b/src/views/listPages.html
@@ -7,7 +7,7 @@
         <header>
             <a class="goBack" href="#"></a>
             <span>预售主粮专区分会场</span>
-            <a href="#"></a>
+            <a href="javascript:void(0);"></a>
         </header>
         <main>
             <img class="topImg"
@@ -15,10 +15,10 @@
             <div class="content">
                 <div class="tab">
                     <ul>
-                        <li class="active"><a href="#">616精选</a></li>
-                        <li><a href="#">幼犬</a></li>
-                        <li><a href="#">成犬</a></li>
-                        <li><a href="#">全犬</a></li>
+                        <li class="active"><a href="javascript:void(0);">616精选</a></li>
+                        <li><a href="javascript:void(0);">幼犬</a></li>
+                        <li><a href="javascript:void(0);">成犬</a></li>
+                        <li><a href="javascript:void(0);">全犬</a></li>
                     </ul>
                 </div>
                 <div class="goodsBox">
