--- a/src/views/listPages.list.html
+++ b/src/views/listPages.list.html
@@ -1,8 +1,8 @@
 {{each data}}
 <li data-id="{{$value['gid']}}">
-    <a href="#"><img src="{{$value['photo']}}" alt=""></a>
+    <a href="javascript:void(0);"><img src="{{$value['photo']}}" alt=""></a>
     <div class="rightBox">
-        <a href="#">{{$value['edit_subject']}}</a>
+        <a href="javascript:void(0);">{{$value['edit_subject']}}</a>
         <div>
             <div>
                 <p>
@@ -14,7 +14,7 @@
                 </p>
                 <p class="ft12">E宠价：¥{{$value['sale_price']}}</p>
             </div>
-            <a href="###">去预定</a>
+            <a href="javascript:void(0);">去预定</a>
         </div>
     </div>
 </li>
