--- a/src/views/search.html
+++ b/src/views/search.html
@@ -3,11 +3,11 @@
         <a class="goBack" href="#"></a>
         <div>
             <input class="searchInput" type="text" placeholder="搜索你喜欢的宝贝">
-            <label for="">
+            <a class="searchIcon" href="#/index/searchListPages">
                 <img src="//static.epetbar.com/static_wap/epetapp/pages/search/images/search-ico.png" alt="">
-            </label>
+            </a>
         </div>
-        <a class="searchBtn" href="#/index/searchListPages">搜索</a>
+        <a class="searchBtn" href="javascript:void(0);">搜索</a>
     </header>
     <main>
         <div class="boutiqueRecommend">
@@ -16,14 +16,14 @@
                 精品推荐
             </p>
             <ul>
-                <li><a href="#">钙胃能</a></li>
-                <li><a href="#">比熊</a></li>
-                <li><a href="#">除臭饼干</a></li>
-                <li><a href="#">冠能</a></li>
-                <li><a href="#">跳蚤</a></li>
-                <li><a href="#">狗笼子</a></li>
-                <li><a href="#">狗碗</a></li>
-                <li><a href="#">比瑞吉</a></li>
+                <li><a href="javascript:void(0);">钙胃能</a></li>
+                <li><a href="javascript:void(0);">比熊</a></li>
+                <li><a href="javascript:void(0);">除臭饼干</a></li>
+                <li><a href="javascript:void(0);">冠能</a></li>
+                <li><a href="javascript:void(0);">跳蚤</a></li>
+                <li><a href="javascript:void(0);">狗笼子</a></li>
+                <li><a href="javascript:void(0);">狗碗</a></li>
+                <li><a href="javascript:void(0);">比瑞吉</a></li>
             </ul>
         </div>
         <div class="recently">
@@ -32,8 +32,8 @@
                 最近搜索
             </p>
             <ul>
-                <li><a href="#">狗</a></li>
-                <li><a href="#">粮</a></li>
+                <li><a href="javascript:void(0);">狗</a></li>
+                <li><a href="javascript:void(0);">粮</a></li>
             </ul>
         </div>
         <div class="clearHistory">清空搜索历史</div>
