--- a/src/views/selectCarefully.html
+++ b/src/views/selectCarefully.html
@@ -4,15 +4,15 @@
                         <img src="./images/index/search.png" alt="">
                         <span>请输入搜索内容</span>
                 </a>
-                <a href="#"></a>
+                <a href="javascript:void(0);"></a>
         </div>
         <nav>
                 <ul>
-                        <li class="active"><a href="#">精选</a></li>
-                        <li><a href="#">美味零食</a></li>
-                        <li><a href="#">进口狗粮</a></li>
-                        <li><a href="#">国产狗粮</a></li>
-                        <li><a href="#">营养保健</a></li>
+                        <li class="active"><a href="#/index/listPages">精选</a></li>
+                        <li><a href="javascript:void(0);">美味零食</a></li>
+                        <li><a href="javascript:void(0);">进口狗粮</a></li>
+                        <li><a href="javascript:void(0);">国产狗粮</a></li>
+                        <li><a href="javascript:void(0);">营养保健</a></li>
                 </ul>
         </nav>
 </header>
@@ -49,35 +49,35 @@
 </div>
 <div class="menu">
         <ul>
-                <li><a href="#"><img src="https://img2.epetbar.com/2019-05/29/10/78ac536b72d00a7f59a79bdfe2b1c7a6.png@!water"
+                <li><a href="javascript:void(0);"><img src="https://img2.epetbar.com/2019-05/29/10/78ac536b72d00a7f59a79bdfe2b1c7a6.png@!water"
                                         alt=""></a></li>
-                <li><a href="#"><img src="https://img2.epetbar.com/2019-05/29/10/053194b8875fc9bbb716f2e058a42258.png@!water"
+                <li><a href="javascript:void(0);"><img src="https://img2.epetbar.com/2019-05/29/10/053194b8875fc9bbb716f2e058a42258.png@!water"
                                         alt=""></a></li>
-                <li><a href="#"><img src="https://img2.epetbar.com/2019-05/29/16/7bec44e1edb76738d2686a4def7939bc.png@!water"
+                <li><a href="javascript:void(0);"><img src="https://img2.epetbar.com/2019-05/29/16/7bec44e1edb76738d2686a4def7939bc.png@!water"
                                         alt=""></a></li>
-                <li><a href="#"><img src="https://img2.epetbar.com/2019-05/29/19/3d4eea30559f9ee7799669e7566e8588.png@!water"
+                <li><a href="javascript:void(0);"><img src="https://img2.epetbar.com/2019-05/29/19/3d4eea30559f9ee7799669e7566e8588.png@!water"
                                         alt=""></a></li>
-                <li><a href="#"><img src="https://img2.epetbar.com/2019-05/29/10/a158b4708dc826ba7fc9173f35eda92a.png@!water"
+                <li><a href="javascript:void(0);"><img src="https://img2.epetbar.com/2019-05/29/10/a158b4708dc826ba7fc9173f35eda92a.png@!water"
                                         alt=""></a></li>
         </ul>
 </div>
 <div class="activeDiv">
         <div class="decennial">
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/847436b4209aefc881ea1bc924e1ed8c.jpg?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/847436b4209aefc881ea1bc924e1ed8c.jpg?x-oss-process=style/water"
                                 alt=""></a>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/90110f058bb2d8f00ebf8ac5000d6db1.jpg?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/90110f058bb2d8f00ebf8ac5000d6db1.jpg?x-oss-process=style/water"
                                 alt=""></a>
         </div>
         <div class="officialRedEnvelope">
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/d790d36b3ad448546951685e5f9349ce.jpg?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/d790d36b3ad448546951685e5f9349ce.jpg?x-oss-process=style/water"
                                 alt=""></a>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/14/08d0320992afbddbcaac76ca1b260c06.gif?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/14/08d0320992afbddbcaac76ca1b260c06.gif?x-oss-process=style/water"
                                 alt=""></a>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/949f88b974196194ed422d42d36c97e3.jpg?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/949f88b974196194ed422d42d36c97e3.jpg?x-oss-process=style/water"
                                 alt=""></a>
         </div>
         <div>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/233b52a7f4a0b752c570a53a86ffa6f3.jpg?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/233b52a7f4a0b752c570a53a86ffa6f3.jpg?x-oss-process=style/water"
                                 alt=""></a>
         </div>
         <div class="swiper-container">
@@ -95,21 +95,21 @@
                 <div class="swiper-pagination"></div>
         </div>
         <div>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/16/88be283f1604d147625e89d77a504b04.png?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/16/88be283f1604d147625e89d77a504b04.png?x-oss-process=style/water"
                                 alt=""></a>
         </div>
         <div>
-                <a href="#"><img src="https://img2.epetbar.com/2019-06/03/20/64c9c8a2497994a198640924dc1dd564.jpg?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/2019-06/03/20/64c9c8a2497994a198640924dc1dd564.jpg?x-oss-process=style/water"
                                 alt=""></a>
         </div>
         <div class="advanceSalesVolume">
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/9526dd1d11ce5f1ff7c64895a9844621.png?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/9526dd1d11ce5f1ff7c64895a9844621.png?x-oss-process=style/water"
                                 alt=""></a>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/41d527c500f92ffe9c9ace9b0a45bfbc.png?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/41d527c500f92ffe9c9ace9b0a45bfbc.png?x-oss-process=style/water"
                                 alt=""></a>
         </div>
         <div>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/30/10/bfdb0c47ad78c013f8763e6e866b19c8.png?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/30/10/bfdb0c47ad78c013f8763e6e866b19c8.png?x-oss-process=style/water"
                                 alt=""></a>
         </div>
         <div class="swiper-container">
@@ -136,36 +136,36 @@
                 <div class="swiper-pagination"></div>
         </div>
         <div>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/7913a03fc4763f5e2b570e3a5783377e.jpg?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/7913a03fc4763f5e2b570e3a5783377e.jpg?x-oss-process=style/water"
                                 alt=""></a>
         </div>
         <div>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/3ee6272a921e161ded6409fed4fc2a72.jpg?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/3ee6272a921e161ded6409fed4fc2a72.jpg?x-oss-process=style/water"
                                 alt=""></a>
         </div>
         <div>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/621356b14765f167d113b861d81d126b.jpg?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/621356b14765f167d113b861d81d126b.jpg?x-oss-process=style/water"
                                 alt=""></a>
         </div>
         <div>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/0def31c846fc660f3d27f686b9e5ffee.jpg?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/0def31c846fc660f3d27f686b9e5ffee.jpg?x-oss-process=style/water"
                                 alt=""></a>
         </div>
         <div>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/2aefc9885462e4afc34142722dec7d87.jpg?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/2aefc9885462e4afc34142722dec7d87.jpg?x-oss-process=style/water"
                                 alt=""></a>
         </div>
         <div>
-                <a href="#"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/613dc38dbd0e1426ccd34741f6f1842e.jpg?x-oss-process=style/water"
+                <a href="javascript:void(0);"><img src="https://img2.epetbar.com/nowater/2019-05/29/11/613dc38dbd0e1426ccd34741f6f1842e.jpg?x-oss-process=style/water"
                                 alt=""></a>
         </div>
 </div>
 <div class="copyright">
         <ul>
-                <li><a href="#">触屏版</a></li>
-                <li><a href="#">手机客户端</a></li>
-                <li><a href="#">关于我们</a></li>
-                <li><a href="#">联系我们</a></li>
+                <li><a href="javascript:void(0);">触屏版</a></li>
+                <li><a href="javascript:void(0);">手机客户端</a></li>
+                <li><a href="javascript:void(0);">关于我们</a></li>
+                <li><a href="javascript:void(0);">联系我们</a></li>
         </ul>
         <div>© wap.epet.com 版权：重庆易宠科技有限公司</div>
 </div>
