--- a/src/views/searchListPages.html
+++ b/src/views/searchListPages.html
@@ -2,7 +2,7 @@
     <header>
         <a class="goBack" href="#"></a>
         <span>商品列表</span>
-        <a href="#"></a>
+        <a href="javascript:void(0);"></a>
     </header>
     <main>
         <div class="searchBox">
