--- a/src/views/search.html
+++ b/src/views/search.html
@@ -3,7 +3,7 @@
         <a class="goBack" href="#"></a>
         <div>
             <input class="searchInput" type="text" placeholder="搜索你喜欢的宝贝">
-            <a class="searchIcon" href="#/index/searchListPages">
+            <a class="searchIcon searchBtn" href="javascript:void(0);">
                 <img src="//static.epetbar.com/static_wap/epetapp/pages/search/images/search-ico.png" alt="">
             </a>
         </div>
@@ -16,6 +16,8 @@
                 精品推荐
             </p>
             <ul>
+                <li><a class="searchAKey" href="javascript:void(0);">澳大利亚</a></li>
+                <li><a class="searchAKey" href="javascript:void(0);">狗粮</a></li>
                 <li><a href="javascript:void(0);">钙胃能</a></li>
                 <li><a href="javascript:void(0);">比熊</a></li>
                 <li><a href="javascript:void(0);">除臭饼干</a></li>
