--- a/src/views/searchListPages.html
+++ b/src/views/searchListPages.html
@@ -8,7 +8,7 @@
         <div class="searchBox">
             <a href="#/index/home/search">
                 <img src="//static.epetbar.com/static_wap/epetapp/pages/search/images/search-ico.png" alt="">
-                <input class="searchInput" type="text" name="" id="">
+                <input class="searchInput" type="text" name="" id="" value="{{keywords}}">
             </a>
         </div>
         <ul class="searchGoodsListPage">
