--- a/src/styles/modules/search/search.scss
+++ b/src/styles/modules/search/search.scss
@@ -168,10 +168,11 @@ body {
       border-radius: 0.05rem;
       a {
         display: flex;
+        color: #333;
         img {
           width: 0.15rem;
           height: 0.15rem;
-          margin: 0.13rem 0 0 0.06rem;
+          margin: 0.15rem 0 0 0.06rem;
         }
         input {
           height: 0.4rem;
@@ -180,7 +181,7 @@ body {
           background: #f6f6f6;
           font-family: "Microsoft Yahei", tahoma, arial;
           width: 90%;
-          text-indent: 0.5rem;
+          text-indent: 0.05rem;
         }
       }
     }
